<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Communication</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">name</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="addFriend">加好友</string>
    <string name="sendMessage">发信息</string>
    <string name="toLogin">转到登录</string>
    <string name="toRegist">转到注册</string>
    <string name="logout">登出</string>
	<string-array name="encrypt_array">  
        <item>DES</item>  
        <item>AES</item>  
        </string-array>
	<string name="username">用户名：</string>
	<string name="password">密码：</string>
	<string name="message">message:</string>  
</resources>