<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".RegistActivity" >

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    -->

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="70dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
	    android:layout_alignParentLeft="true"
	    android:text="@string/username" />
    <EditText
        android:inputType="text"
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:text="@string/name" >
        <requestFocus />
    </EditText>
    <TextView
	    android:id="@+id/textView2"
	    android:layout_width="70dp"
	    android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView1"
	    android:layout_alignParentLeft="true"
	    android:text="@string/password" />
    <EditText
	    android:id="@+id/editText1"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/textView2"
	    android:layout_below="@+id/editText2"
	    android:ems="10"
	    android:inputType="textPassword" />
	<Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="10dp"
        android:text="@string/regist" />
	<Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/editText1"
        android:layout_marginTop="10dp"
        android:text="@string/toLogin" />
	
</RelativeLayout>