<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".CommunicationActivity" >

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    -->
	
   <RadioGroup
       android:id="@+id/radioGroup2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_alignParentTop="true"
	   android:layout_marginTop="30dp">
   </RadioGroup>
   <TextView
	    android:id="@+id/textView1"
	    android:layout_width="70dp"
	    android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/radioGroup2"
        android:layout_alignLeft="@+id/radioGroup2"
	    android:text="@string/message" />
   <EditText
       android:id="@+id/editText1"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_below="@+id/radioGroup2"
       android:layout_marginTop="10dp"
       android:layout_toRightOf="@+id/textView1"
       android:ems="10"
       android:inputType="textMultiLine" >
       <requestFocus />
   </EditText>

   <Button
       android:id="@+id/button1"
       android:layout_width="70dp"
       android:layout_height="40dp"
       android:layout_below="@+id/editText1"
       android:layout_alignLeft="@+id/editText1"
       android:layout_marginTop="30dp"
       android:text="@string/addFriend" />
   
	 <Button
       android:id="@+id/button3"
       android:layout_width="70dp"
       android:layout_height="40dp"
       android:layout_below="@+id/editText1"
       android:layout_marginTop="30dp"
       android:layout_alignBaseline="@+id/button1"
       android:layout_alignBottom="@+id/button1"
       android:layout_alignRight="@+id/editText1"
       android:text="@string/logout" />

	 <Spinner
	     android:id="@+id/spinner1"
	     android:layout_width="120dp"
	     android:layout_height="40dp"
	     android:layout_alignLeft="@+id/button1"
	     android:layout_below="@+id/button1"
	     android:layout_marginTop="10dp" />
     
     <Button
       android:id="@+id/button2"
       android:layout_width="70dp"
       android:layout_height="40dp"
       android:layout_below="@+id/button3"
       android:layout_marginTop="10dp"
       android:layout_toRightOf="@+id/spinner1"
       android:layout_alignRight="@+id/editText1"
       android:text="@string/sendMessage" />
</RelativeLayout>